--- a/plugins/hdf5_metadata_extractor/requirements.txt
+++ b/plugins/hdf5_metadata_extractor/requirements.txt
@@ -1,3 +1,4 @@
 hachoir-core==1.3.3     ; python_version < '3.0'
 hachoir-metadata==1.3.3 ; python_version < '3.0'
 hachoir-parser==1.3.4   ; python_version < '3.0'
+h5py==2.8.0             ; python_version < '3.0'
