--- a/girder/conf/girder.dist.cfg
+++ b/girder/conf/girder.dist.cfg
@@ -1,7 +1,8 @@
 [global]
 server.socket_host = "127.0.0.1"
-server.socket_port = 8080
+server.socket_port = 9000
 server.thread_pool = 100
+tools.proxy.on = True
 
 [auth]
 # Use "bcrypt" or "sha512"
